--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -3118,25 +3118,11 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "project1100",
+   "display_name": "Swift-market_analysis",
    "language": "python",
    "name": "python3"
   },
@@ -3150,7 +3136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
